# KawaiiSearch

./: .clang-format  .editorconfig  .gitignore  LICENSE  Makefile  README.md  cmd_create_db.go  cmd_server.go  embedder.go  file_utils.go  go.mod  go.sum  image_utils.go  main.go  requirements.txt  showcase.ipynb  test.ipynb
embedder/: embedder.cpp  embedder.go  embedder.hpp  embedder_c.cpp  embedder_c.h
embedder_server/: CMakeLists.txt  Makefile
embedder_server/cmake/: FindProtobufWithTargets.cmake  FindgRPC.cmake
embedder_server/protobuf/: embedder.proto
embedder_server/src/: embedder_server.h  main.cpp
embedder_server/src/protobuf/: embedder.grpc.pb.cc  embedder.grpc.pb.h  embedder.pb.cc  embedder.pb.h
etc/systemd/system/: app.service
files/: files_storage.go  files_storage_test.go
images/: exif.go  exif_test.go  image.go  preprocessing.go
scripts/: download_model.py
searcher/: searcher.go
server/: handlers.go  server.go
src/: __main__.py  config_template.py  database.py  download_images.py  dummy_database.py  get_images.py  imlucky.py  predict.py  predict_dummy.py  secrets_template.py  server.py  sparce.py  vectorize_image.py  visualise.py
src/settings/: config.py  secrets.py
src/vk/: get_images.py  vk_database.py
src/vk/settings/: config.py
src_cpp/: .gitignore  CMakeLists.txt  embedder.cpp  embedder_c.cpp
storage/: data_serializer.go  data_serializer_test.go  storage.go  storage_test.go
templates/: index.html
worker/: hash_worker.go
